--- a/index.html
+++ b/index.html
@@ -1,11 +1,15 @@
 <!DOCTYPE html>
 <html>
-  <head>
+
+<head>
     <meta charset="utf-8">
-    <title></title>
+    <title>Mon Premier Site</title>
+    <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/font-awesome.min.css">
-  </head>
-  <body>
-    
-  </body>
+</head>
+
+<body>
+
+</body>
+
 </html>
