Design Page de base

--- a/index.html
+++ b/index.html
@@ -1,15 +1,131 @@
 <!DOCTYPE html>
 <html>
 
-<head>
-    <meta charset="utf-8">
-    <title>Mon Premier Site</title>
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/font-awesome.min.css">
-</head>
+    <head>
+        <meta charset="utf-8">
+        <title>GE Music</title>
+        <!-- Bootstrap core CSS -->
+        <link rel="stylesheet" href="css/bootstrap.min.css">
+        <link rel="stylesheet" href="css/sticky-footer.css">
+        <link rel="stylesheet" href="css/font-awesome.min.css">
+        <link rel="stylesheet" href="css/style.css">
+    </head>
 
-<body>
+    <body>
 
-</body>
+        <div class="container">
+
+            <div class="masthead">
+                <h1 class="text-muted"><i class="fa fa-music" aria-hidden="true"></i>
+ GE Music</h1>
+            </div>
+
+
+            <nav class="navbar navbar-default">
+                <div class="container-fluid">
+                    <!-- Brand and toggle get grouped for better mobile display -->
+                    <div class="navbar-header">
+                        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+                          <span class="sr-only">Toggle navigation</span>
+                          <span class="icon-bar"></span>
+                          <span class="icon-bar"></span>
+                          <span class="icon-bar"></span>
+                        </button>
+
+                    </div>
+
+                    <!-- Collect the nav links, forms, and other content for toggling -->
+                    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                        <ul class="nav navbar-nav">
+                            <li class="active"><a href="#">Accueil<span class="sr-only">(current)</span></a></li>
+                            <li><a href="#">Liste Elèves</a></li>
+                            <li><a href="#">Nouvelle Saisie</a></li>
+                            <li><a href="#">Inscription</a></li>
+                        </ul>
+                    </div>
+                    <!-- /.navbar-collapse -->
+                </div>
+                <!-- /.container-fluid -->
+            </nav>
+
+            <!-- Jumbotron -->
+            <div class="jumbotron">
+                <p class="lead">Application de gestion permettant de gérer les cours de musique et les élèves</p>
+            </div>
+
+            <div class="row">
+                <div class="col-md-12">
+                    <section class="widget">
+                        <table class="table table-striped">
+                            <h4>Liste des Elèves</h4>
+
+                            <thead>
+                                <!-- En-tête du tableau -->
+                                <tr>
+                                    <th class="hidden-xs"></th>
+                                    <th class="hidden-xs">Nom</th>
+                                    <th class="hidden-xs">Prenom</th>
+                                    <th class="hidden-xs">Adresse</th>
+                                    <th class="hidden-xs">CP</th>
+                                    <th class="hidden-xs">Ville</th>
+                                    <th class="hidden-xs">Téléphone</th>
+                                </tr>
+                            </thead>
+
+                            <tbody>
+                                <!-- Corps du tableau -->
+                                <tr>
+                                    <td><i class="fa fa-user-circle-o fa-lg"></i></td>
+                                    <td>Ferreira</td>
+                                    <td>Carmen</td>
+                                    <td>10, rue Bleue</td>
+                                    <td>37100</td>
+                                    <td>Tours</td>
+                                    <td>02 47 49 46 45</td>
+                                </tr>
+                                <tr>
+                                    <td><i class="fa fa-user-circle-o fa-lg"></i></td>
+                                    <td>Dupond</td>
+                                    <td>Jéremie</td>
+                                    <td>5, Bld Haussman</td>
+                                    <td>75010</td>
+                                    <td>Paris</td>
+                                    <td>01 75 49 46 45</td>
+                                </tr>
+                                <tr>
+                                  <td><i class="fa fa-user-circle-o fa-lg"></i></td>
+                                    <td>Dichemain</td>
+                                    <td>Jean-Pascal</td>
+                                    <td>75, rue Nationale</td>
+                                    <td>69010</td>
+                                    <td>Lyon</td>
+                                    <td>04 89 27 40 00</td>
+                                </tr>
+                            </tbody>
+                        </table>
+                        <p><a class="btn btn-default btn btn-primary" href="#" role="button">Ajouter un Elève</a></p>
+                    </section>
+                </div>
+            </div>
+
+
+            <!-- Site footer -->
+            <footer class="footer">
+
+                <div class="container">
+                    <span class="text-muted"><i class="fa fa-music" aria-hidden="true"></i>
+ <strong>GE Music</strong> - 2017 - Tous droit réservés</span>
+                </div>
+            </footer>
+
+        </div>
+        <!-- /container -->
+
+        <!-- JavaScript à positionner en bas de la page HTML-->
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+        <script src="js/bootstrap.min.js"></script>
+        <!-- Correction bug à partir de Windows 8 pour IE10 viewport -->
+        <script src="js/ie10-viewport-bug-workaround.js"></script>
+    </body>
 
 </html>
